--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,7 +15,7 @@ a {
 	margin-bottom:10px;
 	overflow-y:scroll;
 }
-.message-input, #set-user{
+.message-input, .set-user{
 	font-size:1.5em;
 	border:1px solid #333;
 	border-radius:3px;
